<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="account_options">Account options</string>
    <string name="account_type_fanfou">Fanfou</string>
    <string name="account_type_mastodon">Mastodon</string>
    <string name="account_type_statusnet">StatusNet</string>
    <string name="account_type_twitter">Twitter</string>
    <string name="action_accept_friend_request">Accept</string>
    <string name="action_accept_permission_request">Accept</string>
    <string name="action_add">Add</string>
    <string name="action_add_content_warning">Add content warning</string>
    <string name="action_add_conversation_participant">Add member</string>
    <string name="action_add_filter_rule">Add rule</string>
    <string name="action_add_filters_subscription">Add subscription</string>
    <string name="action_add_gif">Add GIF</string>
    <string name="action_add_media">Add media</string>
    <string name="action_add_member">Add member</string>
    <string name="action_add_name_to_home_screen">Add <xliff:g example="Name" id="name">%1$s</xliff:g> to home screen</string>
    <string name="action_add_tab">Add tab</string>
    <string name="action_add_tab_to_home_screen">Add tab to home screen</string>
    <string name="action_add_to_filter">Add to filter</string>
    <string name="action_add_to_home_screen">Add to home screen</string>
    <string name="action_add_to_home_screen_more">Add to home screen…</string>
    <string name="action_add_to_list">Add to list</string>
    <string name="action_block">Block</string>
    <string name="action_buffer_disconnect">Disconnect from Buffer</string>
    <string name="action_buffer_settings">Settings</string>
    <string name="action_buffer_update_now">Publish now</string>
    <string name="action_cancel_retweet">Cancel retweet</string>
    <string name="action_center">Center</string>
    <string name="action_change_language">Change language</string>
    <string name="action_clear">Clear</string>
    <string name="action_clear_messages">Clear messages</string>
    <string name="action_clear_messages_and_delete_conversation">Clear and delete conversation</string>
    <string name="action_comment">Comment</string>
    <string name="action_compose">Compose</string>
    <string name="action_compose_message_convert_to_status">Convert to tweet</string>
    <string name="action_connect_to_buffer">Connect</string>
    <string name="action_conversation_info">Conversation info</string>
    <string name="action_create_conversation">Create conversation</string>
    <string name="action_delete">Delete</string>
    <string name="action_delete_messages">Delete messages</string>
    <string name="action_disable">Disable</string>
    <string name="action_disable_promotions">Disable promotions</string>
    <string name="action_dont_restart">Don\'t restart</string>
    <string name="action_dont_terminate">Don\'t quit</string>
    <string name="action_edit">Edit</string>
    <string name="action_edit_conversation_avatar">Edit icon</string>
    <string name="action_edit_conversation_name">Edit name</string>
    <string name="action_edit_filter_rule">Edit rule</string>
    <string name="action_enable">Enable</string>
    <string name="action_enable_notifications">Enable notifications</string>
    <string name="action_enable_promotions">Enable promotions</string>
    <string name="action_enable_retweets">Enable retweets</string>
    <string name="action_export_to_muted_users">Export to muted users</string>
    <string name="action_favorite">Favorite</string>
    <string name="action_filter_import_from_blocked_users">Import from blocked users</string>
    <string name="action_filter_import_from_muted_users">Import from muted users</string>
    <string name="action_filter_subscriptions_card_manage">Manage subscriptions</string>
    <string name="action_finish">Finish</string>
    <string name="action_follow">Follow</string>
    <string name="action_format_search_update_status">Tweet <xliff:g id="text">%1$s</xliff:g></string>
    <string name="action_import">Import</string>
    <string name="action_import_from">Import from…</string>
    <string name="action_invert_selection">Invert selection</string>
    <string name="action_later">Later</string>
    <string name="action_leave_conversation">Leave conversation</string>
    <string name="action_like">Like</string>
    <string name="action_list_creator">List creator</string>
    <string name="action_location">Location</string>
    <string name="action_manage_in_buffer">Manage in Buffer</string>
    <string name="action_mark_as_read">Mark as read</string>
    <string name="action_more_actions">More actions</string>
    <string name="action_mute">Mute</string>
    <string name="action_mute_notifications">Mute notifications</string>
    <string name="action_open_in_browser">Open in browser</string>
    <string name="action_qr_code">QR code</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_reply">Reply</string>
    <string name="action_report_spam">Report spam</string>
    <string name="action_retweet">Retweet</string>
    <string name="action_search">Search</string>
    <string name="action_set_color">Set color</string>
    <string name="action_set_nickname">Set nickname</string>
    <string name="action_twitter_mute_user">Mute user</string>
    <string name="action_twitter_muted_users">Muted users</string>
    <string name="auto_refresh">Auto refresh</string>
    <string name="builtin_dns_resolver">Built-in DNS resolver</string>
    <string name="content">Content</string>
    <string name="content_and_storage">Content &amp; Storage</string>
    <string name="custom_host_mapping">Custom host mapping</string>
    <string name="custom_host_mapping_summary">Host mapping like /etc/hosts, but does not require any additional permissions.</string>
    <string name="default_api_settings">Default API settings</string>
    <string name="default_api_settings_summary">These settings only apply to newly logged-in accounts</string>
    <string name="display_sensitive_contents">Display sensitive contents</string>
    <string name="display_sensitive_contents_summary">Display sensitive contents without notice in timeline</string>
    <string name="dns_server">DNS Server</string>
    <string name="dns_server_summary">Set DNS Server for network requests.</string>
    <string name="general">General</string>
    <string name="home_refresh">Refresh in home timeline</string>
    <string name="incoming_friendships">Pending follow requests</string>
    <string name="jump_to_top">Jump to top</string>
    <string name="keyboard_shortcut_back">Back</string>
    <string name="keyboard_shortcuts">Keyboard shortcuts</string>
    <string name="link_to_quoted_status">Link to quoted tweet</string>
    <string name="load_item_limit">Load item limit</string>
    <string name="load_item_limit_summary">Set items limit per load.</string>
    <string name="load_more_from_top">Load more from top</string>
    <string name="load_more_from_top_summary">Useful if you prefer to read from bottom to top</string>
    <string name="media_uploader">Media uploader</string>
    <string name="mention_this_user">Mention this user</string>
    <string name="name_first">Display name first</string>
    <string name="name_first_summary_off">Display \@screenname first</string>
    <string name="name_first_summary_on">Display name first</string>
    <string name="navigation">Navigation</string>
    <string name="new_document_api">New Document API</string>
    <string name="new_document_api_summary">Open profile and media in new task</string>
    <string name="next_item">Next</string>
    <string name="next_tab">Next tab</string>
    <string name="open_accounts_dashboard">Open accounts dashboard</string>
    <string name="open_twitter_links">Open Twitter links</string>
    <string name="open_with_account">Open with account</string>
    <string name="page_down">Page down</string>
    <string name="page_up">Page up</string>
    <string name="phishing_link_warning">Phishing link warning</string>
    <string name="phishing_link_warning_summary">Warn you when are trying to open a possibly phishing link in a direct message.</string>
    <string name="preference_summary_auto_refresh_compatibility_mode">Enable for faster refresh interval, increases power usage on Android 5.0+</string>
    <string name="preference_summary_auto_refresh_power_saving">Stop auto refresh when battery is low</string>
    <string name="preference_title_auto_refresh_compatibility_mode">Compatibility mode</string>
    <string name="preference_title_auto_refresh_power_saving">Power saving mode</string>
    <string name="preload_wifi_only">Preload using Wi-Fi only</string>
    <string name="previous_item">Previous</string>
    <string name="previous_tab">Previous tab</string>
    <string name="proxy">Proxy</string>
    <string name="proxy_host">Proxy host</string>
    <string name="proxy_password">Proxy password</string>
    <string name="proxy_port">Proxy port</string>
    <string name="proxy_summary">Use proxy for all network requests.</string>
    <string name="proxy_type">Proxy type</string>
    <string name="proxy_username">Proxy username</string>
    <string name="quote_format">Quote format</string>
    <string name="quote_format_summary">\"[TEXT]\" = Tweet text\n\"[NAME]\" = Twitter username</string>
    <string name="read_from_bottom">Read from bottom</string>
    <string name="read_from_bottom_summary_off">Jump to latest tweet after refreshing</string>
    <string name="read_from_bottom_summary_on">Keep read position after refreshing</string>
    <string name="refresh_after_status_updated">Refresh after tweet sent</string>
    <string name="refresh_after_status_updated_summary">Refresh timeline and mentions after sending a tweet.</string>
    <string name="refresh_interval">Refresh interval</string>
    <string name="refresh_on_start">Refresh on start</string>
    <string name="refresh_on_start_summary">Refresh timeline and mentions on start.</string>
    <string name="remember_position">Remember position</string>
    <string name="remember_position_summary">Remember list/tab position before closing Twidere</string>
    <string name="retry_on_network_issue">Retry on network issue</string>
    <string name="retry_on_network_issue_summary">Try recover from network issue automatically</string>
    <string name="safety">Safety</string>
    <string name="saved_searches">Saved searches</string>
    <string name="security_key">Security key</string>
    <string name="send_direct_message">Send DM</string>
    <string name="server_address">Server address</string>
    <string name="share_format">Share format</string>
    <string name="share_format_summary">\"[TITLE]\" = Content title\n\"[TEXT]\" = Content text</string>
    <string name="status_shortener">Tweet shortener</string>
    <string name="tcp_dns_query">TCP DNS Query</string>
    <string name="tcp_dns_query_summary">Use TCP Protocol to make DNS requests to avoid DNS spoofing.</string>
    <string name="thumbor_integration">Thumbor integration</string>
    <string name="timeline_sync_service">Timeline sync service</string>
    <string name="title_blocked_users">Blocked users</string>
    <string name="title_direct_messages">Messages</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_home">Home</string>
    <string name="title_media_timeline">Media timeline</string>
    <string name="title_statuses">Tweets</string>
    <string name="title_user">User</string>
    <string name="translation_destination">Translation destination</string>
    <string name="trends_location">Trends location</string>
    <string name="trends_location_summary">Set location for local trends.</string>
    <string name="user_mentions">User mentions</string>
</resources>